# src_clean

./: .pylintrc  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  src_clean.py
remover/: base_delete.py  direct_delete.py  rm_output.py
scanner/: __init__.py  base_scanner.py  dotnet.py  node.py
tests/: test_cli.py  test_direct_remover.py  test_dotnet_scanner.py  test_node_scanner.py
